# alsblc

./: .gitignore  CMakeLists.txt  README.md  alsblc_test.py  test.py
alsblc/: __init__.py  alsblcwrapper.py
person/: __init__.py  mymodule_wrap.py
src/: asymleastsquare.cpp  asymleastsquare.hpp  asymleastsquare_wrap.cpp  diff.hpp  person.cpp  person.hpp  person_wrap.cpp  test.cpp
test/: example.npy
